tests/snapshots/regression/nested__call_index_member_chain.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/nested/call_index_member_chain.flx
exit_code: 1

--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `foo`.

  --> tests/fixtures/nested/call_index_member_chain.flx:1:1
  |
1 | foo(1, bar(2, baz(3)))[0].qux(4);
  | ^^^

Hint:
  Define it first: let foo = ...;
